--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
     </dependency>
     <dependency>
       <groupId>com.google.appengine</groupId>
+      <artifactId>appengine-api-stubs</artifactId>
+      <version>1.6.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.appengine</groupId>
       <artifactId>appengine-api-1.0-sdk</artifactId>
       <version>1.7.4</version>      
     </dependency>
@@ -35,7 +41,7 @@
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.2.2</version>
-    </dependency>    
+    </dependency>
   </dependencies>
   
   <build>
