--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
   <packaging>war</packaging>
   <name>FEAR airsoft JSON rest services</name>
   
+  <!--<repositories>
+    <repository>
+      <id>google-api-services</id>
+      <url>http://google-api-client-libraries.appspot.com/mavenrepo</url>
+    </repository>
+  </repositories>-->
+  
   <dependencies>
     <dependency>
       <groupId>javax.servlet</groupId>
